[FIX] Fix scrollbar styles

--- a/contents/assets/style/index.css
+++ b/contents/assets/style/index.css
@@ -212,16 +212,18 @@ div.input-field.command-box-input-inner input.CommandBoxInput.command-box-input:
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 13px;
+    height: 13px;
 }
-
 ::-webkit-scrollbar-track {
     border-style: solid;
     border-width: 1px;
     border-color: rgb(88, 88, 88);
     background-color: rgb(56, 56, 56);
 }
-
 ::-webkit-scrollbar-thumb {
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(88, 88, 88);
     background-color: rgb(102, 102, 102);
 }
